Add browser GUI to tarball

--- a/browser-gui/Makefile.am
+++ b/browser-gui/Makefile.am
@@ -5,47 +5,43 @@
 ## comments starting with a single # are copied to Makefile.in (and afterwards
 ## to Makefile), comments with ## are dropped.
 
+if ENABLE_BROWSER_GUI
+
 BROWSER_GUI_FILES = package.json yarn.lock webpack.config.js README.md \
 	src/index.js \
 	src/sceneviewer.js \
 	src/style.css
 
-EXTRA_DIST = $(BROWSER_GUI_FILES)
-
-if ENABLE_BROWSER_GUI
+dist_noinst_DATA = $(BROWSER_GUI_FILES)
 
 export PATH := $(PATH):$(abs_builddir)/node_modules/.bin
 export NODE_PATH := $(abs_builddir)/node_modules
-
-DIST_PATH = $(abs_builddir)/webpack-dist
 
 YARN_OPTIONS = --no-progress --non-interactive \
 	--cwd $(abs_srcdir) \
 	--modules-folder $(NODE_PATH)
 
-all-local: $(DIST_PATH)/index.html
+WEBPACK_PATH = $(abs_builddir)/../data/websocket_resources
+INSTALL_PATH = $(DESTDIR)$(pkgdatadir)/websocket_resources
 
-$(DIST_PATH)/index.html: $(BROWSER_GUI_FILES)
+all-local: $(WEBPACK_PATH)/index.html
+
+$(WEBPACK_PATH)/index.html: $(BROWSER_GUI_FILES)
+	$(RM) -r $(WEBPACK_PATH)/chunks
 	$(YARN) $(YARN_OPTIONS) install
-	$(YARN) $(YARN_OPTIONS) run build --output-path $(DIST_PATH)
+	$(YARN) $(YARN_OPTIONS) run build --output-path $(WEBPACK_PATH)
 
 install-data-hook:
-	$(MKDIR_P) $(DESTDIR)$(pkgdatadir)/websocket_resources/sourcemaps
-	$(INSTALL) -m 644 \
-		$(DIST_PATH)/*.html \
-		$(DIST_PATH)/*.js \
-		$(DESTDIR)$(pkgdatadir)/websocket_resources
-	$(INSTALL) -m 644 \
-		$(DIST_PATH)/sourcemaps/*.js.map \
-		$(DESTDIR)$(pkgdatadir)/websocket_resources/sourcemaps
-
-clean-local:
-	$(RM) -r $(DIST_PATH)
+	$(MKDIR_P) $(INSTALL_PATH)/chunks/sourcemaps
+	$(INSTALL) -m 644 $(WEBPACK_PATH)/index.html $(INSTALL_PATH)
+	$(INSTALL) -m 644 $(WEBPACK_PATH)/chunks/* $(INSTALL_PATH)/chunks
 
 distclean-local:
 	$(RM) -r $(NODE_PATH)
+	$(RM) -r $(WEBPACK_PATH)/index.html
+	$(RM) -r $(WEBPACK_PATH)/chunks
 
 uninstall-local:
-	$(RM) -r $(DESTDIR)$(pkgdatadir)/websocket_resources
+	$(RM) -r $(INSTALL_PATH)
 
 endif
