--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ set(SSR_VERSION 0.6.0-cmake)
 # Show more of make
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
+# shared or static build
+option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
+message(STATUS "Shared libs: " ${BUILD_SHARED_LIBS})
+
 # Set the output folder where your program will be created
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/_build)
 if(WIN32)
@@ -55,7 +59,7 @@ set(SOURCE_FILES
 # Add libraries to LINKLIBS
 set(LINKLIBS)
 
-set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
+#set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
 find_package(Threads REQUIRED)
 
@@ -65,15 +69,16 @@ find_package(PkgConfig REQUIRED)
 if(WIN32)
   # Set Path to extern headers and libraries for Windows builds
   set(EXTERN_PATH ${PROJECT_SOURCE_DIR}/extern)
-  set(CMAKE_PREFIX_PATH ${EXTERN_PATH})
-  message(STATUS "WINDOWS Prefix: " ${CMAKE_PREFIX_PATH})
+  
+  #set(CMAKE_PREFIX_PATH ${EXTERN_PATH})
+  #message(STATUS "WINDOWS Prefix: " ${CMAKE_PREFIX_PATH})
 
   # Include extern headers
   include_directories(${EXTERN_PATH}/include)
-  message(STATUS "WINDOWS Included: " ${EXTERN_PATH}/include)
+  message(STATUS "Included: " ${EXTERN_PATH}/include)
 
   # here is the target environment located
-  set (CMAKE_FIND_ROOT_PATH ${CMAKE_FIND_ROOT_PATH} ${EXTERN_PATH})
+  set(CMAKE_FIND_ROOT_PATH ${CMAKE_FIND_ROOT_PATH} ${EXTERN_PATH})
 endif(WIN32)
 
 if(WIN32)
@@ -81,12 +86,14 @@ if(WIN32)
   #if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
   #  find_library(LibXml2 NAMES libxml2_msvc)
   #endif()
+  if(NOT ${BUILD_SHARED_LIBS})
+    add_definitions(-DLIBXML_STATIC)
+  endif()
   find_package(LibXml2 REQUIRED)
   include_directories(${LIBXML2_INCLUDE_DIR})
   list(APPEND LINKLIBS ${LIBXML2_LIBRARY})
-  add_definitions(-DLIBXML_STATIC)
   #list(APPEND LINKLIBS "-lxml2 -lz -llzma -lws2_32")
-  list(APPEND LINKLIBS "-llzma")
+  list(APPEND LINKLIBS "-llzma -lz")
   message(STATUS "Found XML2: " ${LIBXML2_LIBRARY})
   message(STATUS "Found XML2 headers: " ${LIBXML2_INCLUDE_DIR})
 else(WIN32)
@@ -119,12 +126,6 @@ find_library(JACK_LIBRARY NAMES jack libjack64)
 list(APPEND LINKLIBS ${JACK_LIBRARY})
 message(STATUS "Found JACK :" ${JACK_LIBRARY})
 
-if(WIN32)
-  find_library(JACKSERVER_LIBRARY NAMES libjackserver64)
-  list(APPEND LINKLIBS ${JACKSERVER_LIBRARY})
-  message(STATUS "Found JACK :" ${JACKSERVER_LIBRARY})
-endif(WIN32)
-
 find_library(FFTW_LIBRARY NAMES fftw3 libfftw3-3)
 list(APPEND LINKLIBS ${FFTW_LIBRARY})
 message(STATUS "Found FFTW: " ${FFTW_LIBRARY})
@@ -134,7 +135,7 @@ list(APPEND LINKLIBS ${FFTWF_LIBRARY})
 message(STATUS "Found FFTWF: " ${FFTWF_LIBRARY})
 
 # GUI
-option(GUI "Build GUI" ON)
+option(GUI "Build GUI" OFF)
 if(GUI)
   # Find includes in corresponding build directories
   set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -142,32 +143,20 @@ if(GUI)
   set(CMAKE_AUTOMOC ON)
 
   include_directories(${PROJECT_SOURCE_DIR}/src/gui)  # necessary?
-  #set(GUI_SOURCE_FILES
-  #    src/gui/qclicktextlabel.cpp
-  #    src/gui/qcpulabel.cpp
-  #    src/gui/qfilemenulabel.cpp
-  #    src/gui/qgui.cpp
-  #    src/gui/qguiframe.cpp
-  #    src/gui/qopenglplotter.cpp
-  #    src/gui/qscenebutton.cpp
-  #    src/gui/qsourceproperties.cpp
-  #    src/gui/qssrtimeline.cpp
-  #    src/gui/qtimeedit.cpp
-  #    src/gui/quserinterface.cpp
-  #    src/gui/qvolumeslider.cpp
-  #    src/gui/qzoomlabel.cpp
-  #    )
   aux_source_directory(${PROJECT_SOURCE_DIR}/src/gui GUI_SOURCE_FILES) 
   list(APPEND SOURCE_FILES ${GUI_SOURCE_FILES})
 
   option(ENABLE_GUI "graphical user interface (using Qt)" ON)
-  option(ENABLE_FLOATING_CONTROL_PANEL "separate control window" ON)
-  option(STATIC_QT "Use static Qt5 libraries (Windows)" ON)
+  option(ENABLE_FLOATING_CONTROL_PANEL "separate control window" OFF)
+
 
   find_package(Qt5 COMPONENTS Core Gui Widgets OpenGL REQUIRED)
   message(STATUS "Found QT5: " ${Qt5_DIR})
 
   if(WIN32)
+    if(NOT ${BUILD_SHARED_LIBS})
+      option(STATIC_QT "Use static Qt5 libraries (Windows)" ON)
+    endif()
     if(STATIC_QT)
       add_definitions(-DQT_STATICPLUGIN)
     endif(STATIC_QT)
@@ -178,6 +167,8 @@ if(GUI)
         )
 
     # Qt5PlatformSupport modules
+    find_library(Qt5PlatformCompositorSupportLIBRARY Qt5PlatformCompositorSupport)
+    list(APPEND QT5PLATFORMSUPPORT_LIBS ${Qt5PlatformCompositorSupportLIBRARY})
     find_library(Qt5ThemeSupport_LIBRARY Qt5ThemeSupport)
     list(APPEND QT5PLATFORMSUPPORT_LIBS ${Qt5ThemeSupport_LIBRARY})
     find_library(Qt5FontDatabaseSupport_LIBRARY Qt5FontDatabaseSupport)
@@ -192,7 +183,7 @@ if(GUI)
     find_package(Freetype REQUIRED)
     list(APPEND QT5PLATFORMSUPPORT_LIBS ${FREETYPE_LIBRARIES})
 
-    list(APPEND QT5PLATFORMSUPPORT_LIBS "-lwtsapi32")
+    #list(APPEND QT5PLATFORMSUPPORT_LIBS "-lwtsapi32")
 
     message(STATUS "Found Qt5PlatformSupport: " ${QT5PLATFORMSUPPORT_LIBS})
   endif(WIN32)
@@ -210,7 +201,7 @@ else(GUI)
 endif(GUI)
 
 # Network
-option(ENABLE_WEBSOCKET_INTERFACE "network websocket interface" ON)
+option(ENABLE_WEBSOCKET_INTERFACE "network websocket interface" OFF)
 if(ENABLE_WEBSOCKET_INTERFACE)
   add_definitions(-DASIO_STANDALONE)
   set(ASIO_PATH ${PROJECT_SOURCE_DIR}/extern/include/asio/asio/include/)
@@ -228,7 +219,7 @@ else(ENABLE_WEBSOCKET_INTERFACE)
   message(WARNING "WEBSOCKET_INTERFACE disabled.")
 endif(ENABLE_WEBSOCKET_INTERFACE)
 
-option(ENABLE_LEGACY_NETWORK_INTERFACE "network xml interface (legacy)" ON)
+option(ENABLE_LEGACY_NETWORK_INTERFACE "network xml interface (legacy)" OFF)
 if(ENABLE_LEGACY_NETWORK_INTERFACE)
   add_definitions(-DASIO_STANDALONE)
   set(ASIO_PATH ${PROJECT_SOURCE_DIR}/extern/include/asio/asio/include/)
@@ -239,7 +230,7 @@ if(ENABLE_LEGACY_NETWORK_INTERFACE)
 
   include_directories(${PROJECT_SOURCE_DIR}/src/legacy_network)
   if(WIN32)
-    #add_definitions(-D_WIN32_WINNT=0x0601)  # Windows 7
+    add_definitions(-D_WIN32_WINNT=0x0601)  # min Windows 7
     list(APPEND LINKLIBS "-lws2_32 -lmswsock")
   endif(WIN32)
   message(STATUS "Enabled LEGACY_NETWORK interface")
@@ -248,7 +239,7 @@ else(ENABLE_LEGACY_NETWORK_INTERFACE)
 endif(ENABLE_LEGACY_NETWORK_INTERFACE)
 
 # Head tracker
-option(HEAD_TRACKER "Basic head tracker support" ON)
+option(HEAD_TRACKER "Basic head tracker support" OFF)
 if(HEAD_TRACKER)
   list(APPEND SOURCE_FILES
     src/trackerrazor.cpp
@@ -268,6 +259,8 @@ endif(HEAD_TRACKER)
 
 # Preprocessor symbols
 add_definitions(-DSSR_DATA_DIR="./data")
+add_definitions(-DAPF_JACK_POLICY_DEBUG)
+add_definitions(-DAPF_JACKCLIENT_DEBUG)
 
 # Config definitions
 # configure a header file to pass some of the CMake settings
@@ -281,45 +274,45 @@ configure_file(
 
 # Compiler flags
 # Add a few for release builds (MAKE_BUILD_TYPE=RELEASE)
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -pipe -Wall -fomit-frame-pointer -ffast-math -funroll-loops -march=x86-64 -mmmx -msse -msse2 -mfpmath=sse")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -fomit-frame-pointer -ffast-math -funroll-loops -march=x86-64 -mmmx -msse -msse2 -mfpmath=sse")
 message(STATUS "Release Flags: " ${CMAKE_CXX_FLAGS_RELEASE})
 # And for debug builds (MAKE_BUILD_TYPE=DEBUG)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -pipe -Wall -ffast-math -march=x86-64 -mmmx -msse -msse2 -mfpmath=sse -Weffc++")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Wa,-mbig-obj")  # -Weffc++ 
 message(STATUS "Debug Flags: " ${CMAKE_CXX_FLAGS_DEBUG})
 
 # Compile executables
 set(EXECUTABLES
     ssr-binaural
-    ssr-brs
-    ssr-vbap
-    ssr-wfs
-    ssr-aap
-    ssr-dca
-    ssr-generic
+#    ssr-brs
+#    ssr-vbap
+#    ssr-wfs
+#    ssr-aap
+#    ssr-dca
+#    ssr-generic
     )
 add_executable(ssr-binaural src/ssr_binaural.cpp ${SOURCE_FILES})
-add_executable(ssr-brs src/ssr_brs.cpp ${SOURCE_FILES})
-add_executable(ssr-vbap src/ssr_vbap.cpp ${SOURCE_FILES})
-add_executable(ssr-wfs src/ssr_wfs.cpp ${SOURCE_FILES})
-add_executable(ssr-aap src/ssr_aap.cpp ${SOURCE_FILES})
-add_executable(ssr-dca src/ssr_dca.cpp ${SOURCE_FILES})
-add_executable(ssr-generic src/ssr_generic.cpp ${SOURCE_FILES})
+#add_executable(ssr-brs src/ssr_brs.cpp ${SOURCE_FILES})
+#add_executable(ssr-vbap src/ssr_vbap.cpp ${SOURCE_FILES})
+#add_executable(ssr-wfs src/ssr_wfs.cpp ${SOURCE_FILES})
+#add_executable(ssr-aap src/ssr_aap.cpp ${SOURCE_FILES})
+#add_executable(ssr-dca src/ssr_dca.cpp ${SOURCE_FILES})
+#add_executable(ssr-generic src/ssr_generic.cpp ${SOURCE_FILES})
 
 
 # Link
-if(WIN32)
+if(NOT ${BUILD_SHARED_LIBS})
   set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
-endif(WIN32)
+endif()
 
 message(STATUS "Linking: "  ${LINKLIBS} ${QT5PLATFORMSUPPORT_LIBS})
 
 foreach(executable ${EXECUTABLES})
-  target_link_libraries(${executable} Threads::Threads stdc++fs)
+  target_link_libraries(${executable} Threads::Threads)
   target_link_libraries(${executable} ${LINKLIBS})
   if(GUI)
     target_link_libraries(${executable} Qt5::Gui Qt5::Core Qt5::Widgets Qt5::OpenGL ${QT5PLATFORMSUPPORT_LIBS})
-    qt5_import_plugins(${executable} INCLUDE Qt5::Gui Qt5::Core Qt5::Widgets Qt5::OpenGL ${QT5PLATFORMSUPPORT_LIBS})
-    qt5_import_plugins(${executable} INCLUDE_BY_TYPE platforms)
-
   endif(GUI)
 endforeach(executable ${EXECUTABLES})
+
+
+# ../../mxe/tools/copydlldeps.sh --infile ./ssr-binaural.exe --destdir ./deps --recursivesrcdir ../../mxe/usr/x86_64-w64-mingw32.shared/ --srcdir ./ --copy --enforcedir ../../mxe/usr/x86_64-w64-mingw32.shared/qt5/plugins/platforms/
